Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33266

Main file of example projects is not opened on top.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 18.0.0-beta1
    • Qt Creator 18.0.0 (18.0 branch)
    • Editors
    • None
    • fdbbe53a4 (18.0)

      examples-manifest.xml can contain <fileToOpen/> elements with an attribute mainFile="true". The file marked in that way is supposed to be the active file in the editor, after the project is loaded. That is achieved by ensuring it is the last file being loaded: https://code.qt.io/cgit/qt-creator/qt-creator.git/tree/src/plugins/qtsupport/gettingstartedwelcomepage.cpp?h=17.0#n178

      However, at least in the case of the Satellite Info example, the other file is active:

      Note: If the file to be loaded on top is prepended instead of appended (in gettingstartedwelcomepage.cpp), the correct document is open on top. I doubt, though, that this would be a proper fix.

        For Gerrit Dashboard: QTCREATORBUG-33266
        # Subject Branch Project Status CR V

            con Eike Ziller
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes